@@ -24,6 +24,9 @@ Library
 - Issue #14710: pkgutil.find_loader() no longer raises an exception when a
   module doesn't exist.
 
+- Issue #8743: Fix interoperability between set objects and the
+  collections.Set() abstract base class.
+
 - Issue #13355: random.triangular() no longer fails with a ZeroDivisionError
   when low equals high.
 
